# paper_assistant_claude

./: .env.example  .env.work  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: manual-check.md  summarize.md  synthesize.md
.kiro/skills/: summarize-paper.md
docs/: design-add-first-class-local-note-entries.md  design-browser-reader-mode.md  design-hf-first-arxiv-retrieval.md  design-web-article-support.md  design-workflow-optimization.md  plan-audio-friendly-readout.md  plan-best-effort-key-visuals.md  plan-qmd-search.md  plan-skill-based-summary.md  plan-skill-driven-transcript.md  roadmap.md
prompts/: paper_summary_instructions.md
scripts/: install-skills.sh
skills/codex/summarize-paper/: SKILL.md
src/paper_assistant/: __init__.py  arxiv.py  audio_assets.py  audio_script.py  bundle.py  cli.py  config.py  hf_papers.py  models.py  notion.py  pdf.py  pipeline.py  podcast.py  prompt.py  search.py  storage.py  summarizer.py  tts.py  visuals.py  web_article.py
src/paper_assistant/web/: app.py  routes.py
tests/: conftest.py  helpers.py  test_arxiv.py  test_audio_assets.py  test_audio_script.py  test_bundle.py  test_cli_add.py  test_cli_create.py  test_cli_list.py  test_cli_show.py  test_cli_transcript_regenerate.py  test_hf_papers.py  test_models.py  test_notion.py  test_pipeline_create.py  test_pipeline_regenerate.py  test_podcast.py  test_search.py  test_skill_import.py  test_storage.py  test_summarizer.py  test_tts.py  test_tts_mlx.py  test_visuals.py  test_web.py  test_web_article.py  test_web_transcript_regenerate.py
(+13 files in other folders)
